Serialize border-image inline style

Serialize border-image inline style by implementing the serializing
logic for it in StylePropertySerializer::GetPropertyValue.

Bug: 825568

Change-Id: Ibaa18dadc41bb7aa735ab5e1384615b5d2270a2c
Reviewed-on: https://chromium-review.googlesource.com/990721
Commit-Queue: Rob Buis <rob.buis@samsung.com>
Reviewed-by: Timothy Loh <timloh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551310}
Former-commit-id: 7076b259f5df19b8979d234da9ac2939f17cdd42